--- a/app/src/main/res/layout/role_fragment.xml
+++ b/app/src/main/res/layout/role_fragment.xml
@@ -1,13 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="#000000"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#D0E9FF">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="12312312" />
+    <LinearLayout
+        android:padding="10dp"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1">
+        <TextView
+            android:id="@+id/role_left"
+            android:layout_weight="3"
+            android:textColor="#2B2B2B"
+            android:gravity="center"
+            android:text="\uf060"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <ImageView
+                android:id="@+id/role_image"
+                android:layout_weight="1"
+                android:src="@drawable/tank_1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+            <TextView
+                android:id="@+id/role_title"
+                android:textColor="#2B2B2B"
+                android:layout_weight="9"
+                android:gravity="center"
+                android:text=""
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/role_right"
+            android:layout_weight="3"
+            android:textColor="#2B2B2B"
+            android:gravity="center"
+            android:text="\uf061"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="2">
+        <include android:id="@+id/include1" layout="@layout/role_fragment_item"></include>
+        <include android:id="@+id/include2" layout="@layout/role_fragment_item"></include>
+        <include android:id="@+id/include3" layout="@layout/role_fragment_item"></include>
+        <LinearLayout
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </LinearLayout>
+    </LinearLayout>
 </LinearLayout>
