--- a/app/src/main/res/layout/upgrade_fragment.xml
+++ b/app/src/main/res/layout/upgrade_fragment.xml
@@ -9,5 +9,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="TextView" />
+        android:text="2" />
 </LinearLayout>
